# fl-execution-framework

./: .coveragerc  .gitignore  .gitlab-ci.yml  Controller.py  FL_FUNDAMENTALS.md  FlowerClient.py  LICENSE  LoadDataset.py  Network.py  Plots.py  READ ME.txt  README.md  TrustReputationStrategy.py  branch-summary.md  clean.sh  data.py  graphs.py  make_medmentions.py  package-lock.json  pyrightconfig.json  pytest.ini  reinstall_requirements.sh  requirements.txt  run_frontend.sh  run_simulation.sh  src_changes.md  start-dev.sh  test_data_generation.md
docs/: ARTIFACT.md  (+5 more)
src/: data.py  (+11 more)
tests/: .flake8  common.py  conftest.py  lint.sh  pyproject.toml  pytest.ini  requirements-test.txt  sonar.sh  test_setup.py  validate_coverage_setup.py
tests/demo/: README.md  failure_logging_demo.py  mock_data_showcase.py  run_showcase.py  strategy_config_demo.py
tests/docs/: README.md  developer_guide.md  fl_fundamentals.md  refactoring_for_testability.md  refactoring_for_ux.md  script_improvements_for_portability.md  src_changes.md  test_data_generation.md  testing_guide.md
tests/fixtures/: __init__.py  mock_datasets.py  mock_flower_components.py  sample_models.py
tests/fixtures/baselines/: breastmnist_krum_vs_labelflip20.baseline.json  femnist_bulyan_baseline.baseline.json  femnist_bulyan_vs_labelflip50.baseline.json  femnist_krum_baseline.baseline.json  femnist_krum_multi_overlapping.baseline.json  femnist_krum_vs_labelflip20.baseline.json  femnist_krum_vs_labelflip50.baseline.json  femnist_mkrum_baseline.baseline.json  femnist_mkrum_multi_concurrent.baseline.json  femnist_mkrum_multi_showcase.baseline.json  femnist_mkrum_vs_gaussnoise25.baseline.json  femnist_mkrum_vs_labelflip20.baseline.json  femnist_mkrum_vs_labelflip50.baseline.json  femnist_pid_baseline.baseline.json  femnist_pidscaled_baseline.baseline.json  femnist_pidstd_baseline.baseline.json  femnist_pidstd_vs_labelflip20.baseline.json  femnist_pidstdscore_baseline.baseline.json  femnist_pidstdscore_vs_labelflip20.baseline.json  femnist_rfa_baseline.baseline.json  femnist_rfa_vs_labelflip20.baseline.json  femnist_trimmean_baseline.baseline.json  femnist_trust_baseline.baseline.json  femnist_trust_vs_labelflip20.baseline.json
tests/integration/: conftest.py  test_api_simulation_flow.py  test_federated_simulation.py  test_flower_mock_integration.py  test_gpu_training.py  test_simulation_flow.py  test_simulation_runner.py  test_strategy_combinations.py  test_strategy_pipeline.py
tests/performance/: test_memory_usage.py  test_scalability.py
tests/scripts/: ci_smoke_test.py  common.sh  constants.py  examples.sh  experiment_runner.py  mock_simulation_runner.py  record_baselines.py  sonar.sh
tests/scripts/runner/: background.py  config_reader.py  display.py  executor.py  interactive.py  output_handler.py  state.py  timing_db.py
tests/type_definitions/: flower_typing_reference.py
tests/unit/: test_attack_scenarios.py  test_attack_snapshots.py  test_dataset_variations.py  test_dynamic_client_malicious.py  test_federated_simulation.py  test_mock_flower_components.py  test_poisoning_stacking.py  test_weight_poisoning.py
tests/unit/test_api/: conftest.py  test_main.py
tests/unit/test_attack_utils/: test_poisoning.py  test_snapshot_html_reports.py  test_snapshot_image_viz.py  test_snapshot_text_viz.py  test_weight_snapshots.py  test_weight_snapshots_plotting.py
tests/unit/test_client_models/: test_flower_client.py
(+447 files in other folders)
