[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-execution-framework-tests"
version = "0.1.0"
dependencies = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.5.0",
    "mypy==1.13.0",
    "ruff==0.13.1",
    "numpy==1.26.4",
    "flwr==1.9.0",
    "torch==2.6.0",
    "opencv-python==4.11.0.86",
    "jsonschema==4.22.0",
]

[tool.setuptools]
packages = []

[tool.mypy]
# Test-focused type checking
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
no_implicit_optional = false

# Third-party library handling
ignore_missing_imports = true

# Skip src/ imports - tests only
follow_imports = "skip"
ignore_errors = true

# Lenient checking for test code
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# Disable style warnings
warn_redundant_casts = false
warn_unused_ignores = false

# Check test directories only
files = [
    "tests/conftest.py",
    "tests/fixtures/",
    "tests/integration/",
    "tests/unit/",
    "tests/performance/"
]

# Skip type reference files
exclude = [
    "tests/type_definitions/"
]
